# icui18n

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: icui18nConfig.cmake.in
include/icui18n/: Concepts.hpp  LocaleSubscription.hpp  Localizable.hpp  Resource.hpp  Resourceful.hpp  export.h
include/icui18n/detail/: BundleNode.hpp  LocalizableBase.hpp  LocalizationDelegate.hpp
src/: Localizable.cpp  Resourceful.cpp
tests/: CMakeLists.txt  test_localizable.cpp  test_resourceful.cpp
tests/data/com/example/ServiceBundle/: fr.txt  root.txt
tests/data/com/example/UserServiceBundle/: fr.txt  root.txt
tests/data/ext/com/ext/ExtServiceBundle/: fr.txt  root.txt
